tests/NormalTests/paczka1/fuzzy1/42107868.err
Error in line 3: JlnDS S46 57,5
Error in line 17: A795 A384 28,6
Error in line 10: JlnDS A795 55,4
Error in line 33: QkFWrtTN A384 48,2
Error in line 29: z6fd S46 91,8
